# chimes-rust

./: Cargo.toml  README.md  chimes-rust-base.sql  chimes-rust-struct.sql
src/: lib.rs  main.rs
src/entity/: base_area_info.rs  chime_profile_info.rs  chimes_account_role_info.rs  chimes_api_server.rs  chimes_attachment_info.rs  chimes_attachment_ref_info.rs  chimes_company_account_info.rs  chimes_company_info.rs  chimes_data_scope.rs  chimes_data_source.rs  chimes_dept_info.rs  chimes_dict_detail_info.rs  chimes_dict_info.rs  chimes_holiday.rs  chimes_job_info.rs  chimes_log_info.rs  chimes_menu_info.rs  chimes_permission_info.rs  chimes_role_dept_info.rs  chimes_role_info.rs  chimes_role_menu_info.rs  chimes_role_menus.rs  chimes_role_permission_info.rs  chimes_user_detail_info.rs  chimes_user_info.rs  chimes_user_job_info.rs  chimes_user_role_info.rs  chimes_user_roles.rs  mod.rs
src/handler/: base_area_info.rs  chimes_api_server.rs  chimes_attachment_info.rs  chimes_attachment_ref_info.rs  chimes_company_account_info.rs  chimes_company_info.rs  chimes_data_scope.rs  chimes_data_source.rs  chimes_dept_info.rs  chimes_dict_detail_info.rs  chimes_dict_info.rs  chimes_holiday.rs  chimes_job_info.rs  chimes_log_info.rs  chimes_menu_info.rs  chimes_performance_info.rs  chimes_permission_info.rs  chimes_role_info.rs  chimes_role_menus.rs  chimes_user_info.rs  chimes_user_roles.rs  mod.rs  query_dict_detail.rs  query_user_permission.rs  user_login.rs
src/query/: mod.rs  query_dict_detail.rs  query_user_menus.rs  query_user_permission.rs  query_user_roles.rs
(+3 files in other folders)
